<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="at.sunilson.liveticker.login.presentation.register.RegisterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_register_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/defaultBackgroundColor"
            >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:padding="@dimen/medium_margin"
                android:background="?selectableItemBackgroundBorderless"
                android:onClick="@{viewModel::back}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/container_padding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_register_register"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/register"
                    android:layout_margin="@dimen/bigger_margin"
                    style="@style/BaseText.Header"
                    />

            <at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout
                    style="@style/BaseTextInputLayout"
                    app:startIconDrawable="@drawable/ic_person_outline_black_24dp"
                    app:startIconTint="@color/baseTextColor"
                    android:hint="@string/username"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.userName}"
                        android:inputType="text"
                        />
            </at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout>

            <at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout
                    style="@style/BaseTextInputLayout"
                    app:startIconDrawable="@drawable/ic_email_black_24dp"
                    app:startIconTint="@color/baseTextColor"
                    android:hint="@string/email"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.email}"
                        android:inputType="textEmailAddress"
                        />
            </at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout>

            <at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout
                    style="@style/BaseTextInputLayout"
                    app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                    app:startIconTint="@color/baseTextColor"
                    android:hint="@string/password"
                    app:passwordToggleTint="@color/subHeaderTextColor"
                    app:passwordToggleEnabled="true"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.password}"
                        android:inputType="textPassword"
                        />
            </at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout>

            <at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout
                    style="@style/BaseTextInputLayout"
                    app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                    app:startIconTint="@color/baseTextColor"
                    android:hint="@string/repeat_password"
                    app:passwordToggleTint="@color/subHeaderTextColor"
                    app:passwordToggleEnabled="true"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.password2}"
                        android:inputType="textPassword"
                        />
            </at.sunilson.liveticker.presentation.views.CustomFontTextInputLayout>

            <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:indeterminate="true"
                    app:showIf="@{viewModel.loading}"
                    />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fragment_register_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/baseTextColorInverted"
                app:icon="@drawable/ic_check_black_24dp"
                app:iconTint="@color/baseTextColorInverted"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/medium_margin"
                android:onClick="@{viewModel::register}"
                />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
